--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,24 +6,30 @@ on:
 
 jobs:
   e2e-tests:
-    runs-on: ubuntu-latest
-
+    name: Tests
+    strategy:
+      fail-fast: false # if tests for one version fail, continue with the rest
+      matrix:
+        # run on multiple platforms to test platform-specific code, if present
+        # (e.g. webkit's WebCrypto API implementation is different in macOS vs Linux)
+        runner: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+    runs-on: ${{ matrix.runner }} 
+    
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
 
       - name: Install dependencies
         run: npm ci
 
       - name: Install Chrome
-        run: npx playwright install-deps chrome
+        run: npx playwright install --with-deps chromium
 
       - name: Install Firefox
-        run: npx playwright install-deps firefox
+        run: npx playwright install --with-deps firefox
 
       - name: Install Webkit
-        run: npx playwright install-deps webkit
+        run: npx playwright install --with-deps webkit
 
       - name: Run tests
         run: npm test
